Fix mocks and tests to work in internal package
